# autoware.core

./: .cspell.json  .lcovrc  THIRD_PARTY_NOTICE  packages_above.repos
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-and-test-daily.yaml  build-and-test.yaml  (+4 more)
api/autoware_default_adapi/: CMakeLists.txt  README.md  package.xml
api/autoware_default_adapi/config/: default_adapi.param.yaml
api/autoware_default_adapi/launch/: default_adapi.launch.py
api/autoware_default_adapi/src/: interface.cpp  interface.hpp  localization.cpp  localization.hpp  routing.cpp  routing.hpp
api/autoware_default_adapi/src/utils/: localization_conversion.hpp  route_conversion.hpp
api/autoware_default_adapi/test/node/: interface_version.py
autoware_core/: CHANGELOG.rst  package.xml
common/autoware_kalman_filter/: CHANGELOG.rst  package.xml
common/autoware_kalman_filter/include/autoware/kalman_filter/: kalman_filter.hpp  time_delay_kalman_filter.hpp
common/autoware_kalman_filter/src/: kalman_filter.cpp  time_delay_kalman_filter.cpp
common/autoware_trajectory/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_trajectory/examples/: example_find_intervals.cpp  example_interpolator.cpp  example_path_point.cpp  example_point.cpp  example_pose.cpp  example_pretty_build.cpp  example_readme.cpp  example_reference_path.cpp  example_shift.cpp
common/autoware_trajectory/include/autoware/trajectory/: forward.hpp  path_point.hpp  path_point_with_lane_id.hpp  point.hpp  pose.hpp  threshold.hpp  trajectory_point.hpp
common/autoware_trajectory/include/autoware/trajectory/detail/: helpers.hpp  interpolated_array.hpp  logging.hpp  types.hpp
common/autoware_trajectory/include/autoware/trajectory/interpolator/: akima_spline.hpp  cubic_spline.hpp  interpolator.hpp  lane_ids_interpolator.hpp  linear.hpp  nearest_neighbor.hpp  result.hpp  spherical_linear.hpp  stairstep.hpp
common/autoware_trajectory/include/autoware/trajectory/interpolator/detail/: interpolator_common_interface.hpp  interpolator_mixin.hpp  nearest_neighbor_common_impl.hpp  stairstep_common_impl.hpp
common/autoware_trajectory/include/autoware/trajectory/utils/: closest.hpp  crop.hpp  crossed.hpp  curvature_utils.hpp  find_intervals.hpp  pretty_build.hpp  reference_path.hpp  shift.hpp
common/autoware_trajectory/src/: path_point.cpp  path_point_with_lane_id.cpp  point.cpp  pose.cpp  threshold.cpp  trajectory_point.cpp
common/autoware_trajectory/src/detail/: logging.cpp  types.cpp  util.cpp
common/autoware_trajectory/src/interpolator/: akima_spline.cpp  cubic_spline.cpp  lane_ids_interpolator.cpp  linear.cpp  result.cpp  spherical_linear.cpp
common/autoware_trajectory/src/utils/: closest.cpp  crossed.cpp  find_intervals.cpp  pretty_build.cpp  reference_path.cpp  shift.cpp
common/autoware_trajectory/test/: tese_shift.cpp  test_helpers.cpp  test_interpolator.cpp  test_interpolator_failure.cpp  test_pretty_build.cpp  test_reference_path.cpp  test_shift.cpp  test_trajectory_container.cpp  test_trajectory_container_trajectory_point.cpp
map/autoware_lanelet2_map_visualizer/: CMakeLists.txt  package.xml
map/autoware_lanelet2_map_visualizer/test/: lanelet2_map_visualizer_launch.test.py  test_lanelet2_map_visualization_node.cpp  test_node_initialization.cpp
perception/autoware_euclidean_cluster_object_detector/: CMakeLists.txt  README.md  package.xml
perception/autoware_euclidean_cluster_object_detector/config/: euclidean_cluster.param.yaml
perception/autoware_euclidean_cluster_object_detector/include/autoware/euclidean_cluster_object_detector/: euclidean_cluster.hpp  euclidean_cluster_interface.hpp  utils.hpp  voxel_grid_based_euclidean_cluster.hpp
perception/autoware_euclidean_cluster_object_detector/launch/: euclidean_cluster.launch.py  euclidean_cluster.launch.xml  voxel_grid_based_euclidean_cluster.launch.py  voxel_grid_based_euclidean_cluster.launch.xml
perception/autoware_euclidean_cluster_object_detector/lib/: euclidean_cluster.cpp  utils.cpp  voxel_grid_based_euclidean_cluster.cpp
perception/autoware_euclidean_cluster_object_detector/src/: euclidean_cluster_node.cpp  euclidean_cluster_node.hpp  voxel_grid_based_euclidean_cluster_node.cpp  voxel_grid_based_euclidean_cluster_node.hpp
perception/autoware_euclidean_cluster_object_detector/test/: test_euclidean_cluster.cpp  test_nodes.cpp  test_utils.cpp  test_voxel_grid_based_euclidean_cluster.cpp
perception/autoware_perception_objects_converter/: CMakeLists.txt  README.md  package.xml
perception/autoware_perception_objects_converter/launch/: detected_to_predicted_objects.launch.xml
perception/autoware_perception_objects_converter/src/: detected_to_predicted_objects_converter.cpp  detected_to_predicted_objects_converter.hpp
sensing/autoware_downsample_filters/: CMakeLists.txt  README.md  package.xml
sensing/autoware_downsample_filters/config/: random_downsample_filter_node.param.yaml  voxel_grid_downsample_filter_node.param.yaml
sensing/autoware_downsample_filters/launch/: random_downsample_filter_node.launch.xml  voxel_grid_downsample_filter_node.launch.xml
sensing/autoware_downsample_filters/schema/: random_downsample_filter_node.schema.json  voxel_grid_downsample_filter_node.schema.json
sensing/autoware_downsample_filters/src/random_downsample_filter/: random_downsample_filter_node.cpp  random_downsample_filter_node.hpp
sensing/autoware_downsample_filters/src/voxel_grid_downsample_filter/: faster_voxel_grid_downsample_filter.cpp  faster_voxel_grid_downsample_filter.hpp  memory.cpp  memory.hpp  transform_info.hpp  voxel_grid_downsample_filter_node.cpp  voxel_grid_downsample_filter_node.hpp
sensing/autoware_gnss_poser/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensing/autoware_gnss_poser/include/autoware/gnss_poser/: gnss_poser_node.hpp
sensing/autoware_gnss_poser/test/: test_gnss_poser_node.cpp
sensing/autoware_vehicle_velocity_converter/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensing/autoware_vehicle_velocity_converter/test/: test_vehicle_velocity_converter.cpp
(+351 files in other folders)
