<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_kalman_filter</name>
  <version>1.1.0</version>
  <description>The kalman filter package</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="ryu.yamamoto@tier4.jp">Ryu Yamamoto</maintainer>
  <maintainer email="yamato.ando@tier4.jp">Yamato Ando</maintainer>
  <maintainer email="masahiro.sakamoto@tier4.jp">Masahiro Sakamoto</maintainer>
  <maintainer email="anh.nguyen.2@tier4.jp">NGUYEN Viet Anh</maintainer>
  <maintainer email="taiki.yamada@tier4.jp">Taiki Yamada</maintainer>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</maintainer>
  <license>Apache License 2.0</license>

  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
